añado video al móvil

--- a/style.css
+++ b/style.css
@@ -195,6 +195,50 @@ nav ul li a{
    }
 
 .animacion-movil{
+    position: absolute;
     background-color:aqua;
-    width: 100px;
+    width: 250px;
+    height: 520px;
+    margin-left: 220px;
+    border-radius: 10%;
+    -webkit-animation: color-change-5x 8s linear infinite alternate both;
+	        animation: color-change-5x 8s linear infinite alternate both;
+
 }
+
+/*Animación móvil page-1*/
+ @-webkit-keyframes color-change-5x {
+    0% {
+      background: #19dcea;
+    }
+    25% {
+      background: #b22cff;
+    }
+    50% {
+      background: #ea2222;
+    }
+    75% {
+      background: #f5be10;
+    }
+    100% {
+      background: #3bd80d;
+    }
+  }
+  @keyframes color-change-5x {
+    0% {
+      background: #19dcea;
+    }
+    25% {
+      background: #b22cff;
+    }
+    50% {
+      background: #ea2222;
+    }
+    75% {
+      background: #f5be10;
+    }
+    100% {
+      background: #3bd80d;
+    }
+  }
+  
